<resources>
    <string name="app_name">Workout schedule</string>


    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <string-array name="languages">
        <item>English</item>
        <item>Русский</item>
        <item>Українська</item>
    </string-array>

    <string name="mon">MONDAY</string>
    <string name="tue">TUESDAY</string>
    <string name="wed">WEDNESDAY</string>
    <string name="thu">THURSDAY</string>
    <string name="fri">FRIDAY</string>
    <string name="sut">SATURDAY</string>
    <string name="sun">SUNDAY</string>

    <string name="trainings">Trainings</string>
    <string name="how_to_use">How to use</string>
    <string name="settings">Settings</string>

    <string name="share">Share:</string>
    <string name="app_name_1">WORK</string>
    <string name="app_name_2">OUT</string>
    <string name="app_name_3">SCHEDULE</string>
    <string name="recommendation_subject">Great app</string>
    <string name="choose_another">You don`t have this app, but you can choose another one:</string>

    <string name="tip_of_day">Tip of the day:</string>
    <string name="workout">Workout</string>
    <string name="name">name:</string>
    <string name="weight">Weight:</string>
    <string name="repeat">Repeat:</string>
    <string name="amount">Amount:</string>

    <string name="pandas_creators">Creators</string>
    <string name="development">Development:</string>
    <string name="design">Design:</string>
    <string name="special_thanks">Special thanks:</string>
    <string name="contact_us_1">Contact us with or without cause :)</string>
    <string name="contact_us_2">facebook.com/st.dmytro</string>
    <string name="choose_language">Language</string>

    <string name="turn_notification">Turn notifications</string>
    <string name="enter_following">Enter the following:</string>
    <string name="name_trainings">Name of training:</string>
    <string name="repetition">Repetition:</string>
    <string name="approaches">Approaches:</string>

    <string name="btn_rate">Rate us</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_apply">Apply</string>
    <string name="attention">Only numbers!</string>
    <string name="its_not_working">It isn`t work in this version</string>

    <string name="update_name">Update the name</string>
    <string name="update_weight">Update weight</string>
    <string name="update_repeat">Update repetition</string>
    <string name="update_approaches">Update approaches</string>

    <string name="dmitry">Dmitry Kizama</string>
    <string name="alexandra"> Alexandra Berezyuk</string>
    <string name="anton">Anton Kizama</string>
    <string name="sveta">Svetlana Kovalenko</string>

    <string name="tv_text_1">Welcome to the Sports Schedule. This app is intended for record training.  Here you can see a brief instruction how to use it.</string>
    <string name="tv_text_2">This is your start page. In order to add a new exercise press the "plus" button. You will see dialog box which is shown below.</string>
    <string name="tv_text_3">Red circle shows the optimal number of words in the title, but it is not required.</string>
    <string name="tv_text_4">For example: enter workout name - "pullups", weight (kilograms) - "10", Approaches (amount) - "15", Repetition (repeat) - "3".</string>
    <string name="tv_text_5">Make a long click on the item.</string>
    <string name="tv_text_6">In order to cancel an action click on any part of the screen or make a long click on another exercise</string>
    <string name="tv_text_7">If you want to change weight, name or another part of an exercise, make the same click</string>
    <string name="tv_text_8">Pay attention that weight, repetition, approaches must contain only numbers!</string>
    <string name="tv_text_9">Enjoy Pandout!</string>

    <string name="never_say_no_to_panda">Never say no to panda</string>
    <string name="follow_the_schedule_go_to_sleep">Follow the schedule - go to sleep</string>
    <string name="don_t_forget_about_dumplings_eat">Don`t forget about dumplings - eat</string>
    <string name="transform_soft_and_fluffy_into_strong_and_fluffy">Transform soft and fluffy into strong and fluffy</string>
    <string name="it_s_a_high_time">It`s a high time for great things</string>
    <string name="start_small">Start small, finish big</string>

    <string name="rate_text">Rating that we deserve</string>
    <string name="thanks">Thank you for rating</string>
    <string name="already">You have already rated</string>
</resources>
