<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentInSettings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shadow_1"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_size_mini"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="46sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/fab_size_mini"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/turn_notification"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switch_in_menu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:weightSum="2">


        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnApplyInMenu"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            fancy:fb_defaultColor="@color/background_color"
            fancy:fb_text="@string/btn_apply"
            fancy:fb_textColor="@color/orange" />

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="#BDBDBD" />

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnCancelInMenu"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            fancy:fb_defaultColor="@color/background_color"
            fancy:fb_text="@string/btn_cancel"
            fancy:fb_textColor="@color/primary" />

    </LinearLayout>


</LinearLayout>