<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_4"
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:padding="16dp"
            android:text="@string/tv_text_4" />

        <ImageView
            android:id="@+id/img_3"
            android:layout_width="400dp"
            android:layout_height="150dp"
            android:layout_below="@+id/tv_4"
            android:src="@drawable/example_min" />

        <TextView
            android:id="@+id/tv_5"
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_3"
            android:lineSpacingMultiplier="1.2"
            android:padding="16dp"
            android:text="@string/tv_text_5" />

        <ImageView
            android:id="@+id/img_4"
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_5"
            android:src="@drawable/delete_min" />

        <TextView
            android:id="@+id/tv_9"
            style="?android:textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_4"
            android:lineSpacingMultiplier="1.2"
            android:padding="16dp"
            android:text="@string/tv_text_6" />

    </RelativeLayout>
</ScrollView>