<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_1">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/enter_following"
                android:textColor="@color/color_of_words"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/name_trainings"
                android:textColor="@color/color_of_words"
                android:textSize="20sp" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:met_baseColor="@android:color/background_dark"
                app:met_errorColor="@android:color/holo_red_dark"
                app:met_maxCharacters="10"
                app:met_primaryColor="@android:color/background_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:orientation="vertical"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/repetition"
                        android:textColor="@color/color_of_words"
                        android:textSize="@dimen/text_size_in_dialog" />


                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/edtRepetition"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:digits="1234567890"
                        android:inputType="number"
                        app:met_baseColor="@android:color/background_dark"
                        app:met_errorColor="@android:color/holo_red_dark"
                        app:met_maxCharacters="4"
                        app:met_primaryColor="@android:color/background_dark" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/approaches"
                        android:textColor="@color/color_of_words"
                        android:textSize="@dimen/text_size_in_dialog" />

                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/edtApproaches"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:digits="1234567890"
                        android:inputType="number"
                        app:met_baseColor="@android:color/background_dark"
                        app:met_errorColor="@android:color/holo_red_dark"
                        app:met_maxCharacters="4"
                        app:met_primaryColor="@android:color/background_dark" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/weight"
                        android:textColor="@color/color_of_words"
                        android:textSize="@dimen/text_size_in_dialog" />


                    <com.rengwuxian.materialedittext.MaterialEditText
                        android:id="@+id/edtWeight"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:digits="1234567890"
                        android:inputType="number"
                        app:met_baseColor="@android:color/background_dark"
                        app:met_errorColor="@android:color/holo_red_dark"
                        app:met_maxCharacters="4"
                        app:met_primaryColor="@android:color/background_dark" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btnAdd"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    fancy:fb_defaultColor="@color/background_color"
                    fancy:fb_text="@string/btn_apply"
                    fancy:fb_textColor="@color/orange" />

                <TextView
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:background="#BDBDBD" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    fancy:fb_defaultColor="@color/background_color"
                    fancy:fb_text="@string/btn_cancel"
                    fancy:fb_textColor="@color/primary" />


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</ScrollView>